src/snapshots/rsademo__avalanche__tests__avalanche_inconsistent_width.snap
---
source: src/avalanche.rs
assertion_line: 210
expression: snapshot
---
error: avalanche bit widths are inconsistent
