src/snapshots/rsademo__avalanche__tests__avalanche_odd_count.snap
---
source: src/avalanche.rs
assertion_line: 202
expression: snapshot
---
biases:
  - 4
  - 4
message_bits:
  - false
  - false
