src/snapshots/rsademo__avalanche__tests__avalanche_pair_bias_rule.snap
---
source: src/avalanche.rs
assertion_line: 171
expression: snapshot
---
biases:
  - 1
  - 1
  - 1
message_bits:
  - true
  - false
  - false
