src/snapshots/rsademo__avalanche__tests__avalanche_recursive_four.snap
---
source: src/avalanche.rs
assertion_line: 187
expression: snapshot
---
biases:
  - 2
  - 4
message_bits:
  - false
  - false
