src/snapshots/rsademo__avalanche__tests__avalanche_similarity_recursive_four.snap
---
source: src/avalanche.rs
expression: snapshot
---
level_pair_counts:
  - 2
  - 1
level_similarity_pct:
  - 50
  - 0
