src/snapshots/rsademo__avalanche__tests__avalanche_similarity_two_nodes.snap
---
source: src/avalanche.rs
expression: snapshot
---
level_pair_counts:
  - 1
level_similarity_pct:
  - 12.5
